# AITest

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
autotestdesign/: app.py  config.py
autotestdesign/core/: export.py  models.py  optimizer.py  oracle.py  parsing.py  pipeline.py  risk.py
autotestdesign/core/blackbox/: boundary.py  decision_table.py  equivalence.py
autotestdesign/core/whitebox/: state_machine.py
autotestdesign/examples/: banking_registration.csv  loader.py  shopping_cart.md
autotestdesign/llm/: client.py
autotestdesign/llm/prompts/: score_risk.md  structure_requirement.md  synthesize_oracle.md
autotestdesign/ui/: export_panel.py  risk_panel.py  state.py  state_diagram.py  testcase_viewer.py  theme.py  upload_panel.py
demo/: demo_script.md  generate_ppt.py  presentation.pptx
docs/: 测试技术详解_答辩参考.md
docs/reports/: detailed_test_design.md  risk_analysis_report.md  test_plan.md
docs/superpowers/plans/: 2026-05-01-autotestdesign.md
scripts/: smoke_test.py
target_app/: __init__.py  auth_system.py  requirements.csv  run_pipeline.py  test_auth_system.py
target_app/output/: testsuite.csv  testsuite.json  testsuite.xlsx
task/: design.md  tasks.md
tests/fixtures/: fake_llm.py
tests/integration/: test_pipeline.py
tests/unit/: test_boundary.py  test_config.py  test_decision_table.py  test_equivalence.py  test_examples.py  test_export.py  test_llm_client.py  test_models.py  test_optimizer.py  test_oracle.py  test_parsing.py  test_risk.py  test_state_machine.py
(+1 files in other folders)
