[project]
name = "autotestdesign"
version = "0.1.0"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["autotestdesign*"]
exclude = ["tests*", "out*", "resources*", "scripts*", "docs*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-p no:launch -p no:launch_ros -p no:launch_testing -p no:launch_testing_ros"
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]

[tool.coverage.run]
source = ["autotestdesign/core"]
omit = ["autotestdesign/llm/*", "autotestdesign/ui/*", "autotestdesign/app.py"]

[tool.ruff]
line-length = 100
